src/objects/EventApi__Event_Page_Component__c.object
<CustomObject>
    <description>Components that make up the look and feel of each event page.</description>
    <fields>
        <fullName>EventApi__Component_Name__c</fullName>
        <description>** REQUIRED ** API name of a Lightning component.</description>
        <inlineHelpText>** REQUIRED ** API name of a Lightning component.</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Config__c</fullName>
        <description>** SYSTEM ** (LABEL = SYSTEM, API NAME = EventApi__Config__c)</description>
        <inlineHelpText>** SYSTEM ** (LABEL = SYSTEM, API NAME = EventApi__Config__c)</inlineHelpText>
        <label>System</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>** REQUIRED ** Linked to the related event page.</description>
        <inlineHelpText>** REQUIRED ** Linked to the related event page.</inlineHelpText>
        <label>Event Page</label>
        <referenceTo>EventApi__Event_Page__c</referenceTo>
        <relationshipLabel>Event Page Components</relationshipLabel>
        <relationshipName>Event_Page_Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Order__c</fullName>
        <description>** REQUIRED ** Display order of Lightning components on a page.</description>
        <inlineHelpText>** REQUIRED ** Display order of Lightning components on a page.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Title__c</fullName>
        <description>The name of the related lightning component.</description>
        <inlineHelpText>The name of the related lightning component.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Page Component</label>
    <nameField>
        <displayFormat>EPC-{0000000}</displayFormat>
        <label>Event Page Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Page Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>